parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON

Grammar

Rule 0     S' -> line
Rule 1     line -> expr SEMICOLON
Rule 2     expr -> INTEGER
Rule 3     expr -> FLOAT
Rule 4     expr -> STRING
Rule 5     expr -> BOOLEAN
Rule 6     expr -> VARIABLE
Rule 7     expr -> list
Rule 8     expr -> tuple
Rule 9     expr -> expr indexSequenceList EQ expr
Rule 10    expr -> HASHTAG INTEGER expr
Rule 11    tuple -> L_PAREN sequence R_PAREN
Rule 12    tuple -> L_PAREN R_PAREN
Rule 13    expr -> expr POW expr
Rule 14    expr -> expr MULT expr
Rule 15    expr -> expr DIVINT expr
Rule 16    expr -> expr DIV expr
Rule 17    expr -> expr MOD expr
Rule 18    expr -> expr PLUS expr
Rule 19    expr -> expr MINUS expr
Rule 20    expr -> MINUS expr
Rule 21    expr -> expr AND_ALSO expr
Rule 22    expr -> expr OR_ELSE expr
Rule 23    expr -> expr LTE expr
Rule 24    expr -> expr GTE expr
Rule 25    expr -> expr EQ_EQ expr
Rule 26    expr -> expr NEQ expr
Rule 27    expr -> expr LT expr
Rule 28    expr -> expr GT expr
Rule 29    expr -> expr IN expr
Rule 30    expr -> expr CONS expr
Rule 31    expr -> NOT expr
Rule 32    expr -> expr L_BRACK expr R_BRACK
Rule 33    list -> L_BRACK sequence R_BRACK
Rule 34    list -> L_BRACK R_BRACK
Rule 35    sequence -> expr COMMA sequence
Rule 36    sequence -> expr
Rule 37    expr -> L_PAREN expr R_PAREN
Rule 38    expr -> expr EQ expr
Rule 39    indexSequenceList -> indexSequenceList indexTkn
Rule 40    indexSequenceList -> indexTkn
Rule 41    indexTkn -> L_BRACK INTEGER R_BRACK

Terminals, with rules where they appear

AND_ALSO             : 21
BOOLEAN              : 5
COLON                : 
COMMA                : 35
CONS                 : 30
DIV                  : 16
DIVINT               : 15
EQ                   : 9 38
EQ_EQ                : 25
FLOAT                : 3
GT                   : 28
GTE                  : 24
HASHTAG              : 10
IN                   : 29
INTEGER              : 2 10 41
LT                   : 27
LTE                  : 23
L_BRACK              : 32 33 34 41
L_PAREN              : 11 12 37
MINUS                : 19 20
MOD                  : 17
MULT                 : 14
NEQ                  : 26
NOT                  : 31
OR_ELSE              : 22
PLUS                 : 18
POW                  : 13
R_BRACK              : 32 33 34 41
R_PAREN              : 11 12 37
SEMICOLON            : 1
STRING               : 4
VARIABLE             : 6
error                : 

Nonterminals, with rules where they appear

expr                 : 1 9 9 10 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 32 32 35 36 37 38 38
indexSequenceList    : 9 39
indexTkn             : 39 40
line                 : 0
list                 : 7
sequence             : 11 33 35
tuple                : 8

Parsing method: LALR

state 0

    (0) S' -> . line
    (1) line -> . expr SEMICOLON
    (2) expr -> . INTEGER
    (3) expr -> . FLOAT
    (4) expr -> . STRING
    (5) expr -> . BOOLEAN
    (6) expr -> . VARIABLE
    (7) expr -> . list
    (8) expr -> . tuple
    (9) expr -> . expr indexSequenceList EQ expr
    (10) expr -> . HASHTAG INTEGER expr
    (13) expr -> . expr POW expr
    (14) expr -> . expr MULT expr
    (15) expr -> . expr DIVINT expr
    (16) expr -> . expr DIV expr
    (17) expr -> . expr MOD expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . MINUS expr
    (21) expr -> . expr AND_ALSO expr
    (22) expr -> . expr OR_ELSE expr
    (23) expr -> . expr LTE expr
    (24) expr -> . expr GTE expr
    (25) expr -> . expr EQ_EQ expr
    (26) expr -> . expr NEQ expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr IN expr
    (30) expr -> . expr CONS expr
    (31) expr -> . NOT expr
    (32) expr -> . expr L_BRACK expr R_BRACK
    (37) expr -> . L_PAREN expr R_PAREN
    (38) expr -> . expr EQ expr
    (33) list -> . L_BRACK sequence R_BRACK
    (34) list -> . L_BRACK R_BRACK
    (11) tuple -> . L_PAREN sequence R_PAREN
    (12) tuple -> . L_PAREN R_PAREN

    INTEGER         shift and go to state 3
    FLOAT           shift and go to state 4
    STRING          shift and go to state 5
    BOOLEAN         shift and go to state 6
    VARIABLE        shift and go to state 7
    HASHTAG         shift and go to state 10
    MINUS           shift and go to state 11
    NOT             shift and go to state 12
    L_PAREN         shift and go to state 14
    L_BRACK         shift and go to state 13

    line                           shift and go to state 1
    expr                           shift and go to state 2
    list                           shift and go to state 8
    tuple                          shift and go to state 9

state 1

    (0) S' -> line .



state 2

    (1) line -> expr . SEMICOLON
    (9) expr -> expr . indexSequenceList EQ expr
    (13) expr -> expr . POW expr
    (14) expr -> expr . MULT expr
    (15) expr -> expr . DIVINT expr
    (16) expr -> expr . DIV expr
    (17) expr -> expr . MOD expr
    (18) expr -> expr . PLUS expr
    (19) expr -> expr . MINUS expr
    (21) expr -> expr . AND_ALSO expr
    (22) expr -> expr . OR_ELSE expr
    (23) expr -> expr . LTE expr
    (24) expr -> expr . GTE expr
    (25) expr -> expr . EQ_EQ expr
    (26) expr -> expr . NEQ expr
    (27) expr -> expr . LT expr
    (28) expr -> expr . GT expr
    (29) expr -> expr . IN expr
    (30) expr -> expr . CONS expr
    (32) expr -> expr . L_BRACK expr R_BRACK
    (38) expr -> expr . EQ expr
    (39) indexSequenceList -> . indexSequenceList indexTkn
    (40) indexSequenceList -> . indexTkn
    (41) indexTkn -> . L_BRACK INTEGER R_BRACK

    SEMICOLON       shift and go to state 15
    POW             shift and go to state 18
    MULT            shift and go to state 19
    DIVINT          shift and go to state 20
    DIV             shift and go to state 21
    MOD             shift and go to state 22
    PLUS            shift and go to state 23
    MINUS           shift and go to state 24
    AND_ALSO        shift and go to state 25
    OR_ELSE         shift and go to state 26
    LTE             shift and go to state 27
    GTE             shift and go to state 28
    EQ_EQ           shift and go to state 29
    NEQ             shift and go to state 30
    LT              shift and go to state 31
    GT              shift and go to state 32
    IN              shift and go to state 33
    CONS            shift and go to state 34
    L_BRACK         shift and go to state 35
    EQ              shift and go to state 17

    indexSequenceList              shift and go to state 16
    indexTkn                       shift and go to state 36

state 3

    (2) expr -> INTEGER .

    SEMICOLON       reduce using rule 2 (expr -> INTEGER .)
    POW             reduce using rule 2 (expr -> INTEGER .)
    MULT            reduce using rule 2 (expr -> INTEGER .)
    DIVINT          reduce using rule 2 (expr -> INTEGER .)
    DIV             reduce using rule 2 (expr -> INTEGER .)
    MOD             reduce using rule 2 (expr -> INTEGER .)
    PLUS            reduce using rule 2 (expr -> INTEGER .)
    MINUS           reduce using rule 2 (expr -> INTEGER .)
    AND_ALSO        reduce using rule 2 (expr -> INTEGER .)
    OR_ELSE         reduce using rule 2 (expr -> INTEGER .)
    LTE             reduce using rule 2 (expr -> INTEGER .)
    GTE             reduce using rule 2 (expr -> INTEGER .)
    EQ_EQ           reduce using rule 2 (expr -> INTEGER .)
    NEQ             reduce using rule 2 (expr -> INTEGER .)
    LT              reduce using rule 2 (expr -> INTEGER .)
    GT              reduce using rule 2 (expr -> INTEGER .)
    IN              reduce using rule 2 (expr -> INTEGER .)
    CONS            reduce using rule 2 (expr -> INTEGER .)
    L_BRACK         reduce using rule 2 (expr -> INTEGER .)
    EQ              reduce using rule 2 (expr -> INTEGER .)
    COMMA           reduce using rule 2 (expr -> INTEGER .)
    R_BRACK         reduce using rule 2 (expr -> INTEGER .)
    R_PAREN         reduce using rule 2 (expr -> INTEGER .)


state 4

    (3) expr -> FLOAT .

    SEMICOLON       reduce using rule 3 (expr -> FLOAT .)
    POW             reduce using rule 3 (expr -> FLOAT .)
    MULT            reduce using rule 3 (expr -> FLOAT .)
    DIVINT          reduce using rule 3 (expr -> FLOAT .)
    DIV             reduce using rule 3 (expr -> FLOAT .)
    MOD             reduce using rule 3 (expr -> FLOAT .)
    PLUS            reduce using rule 3 (expr -> FLOAT .)
    MINUS           reduce using rule 3 (expr -> FLOAT .)
    AND_ALSO        reduce using rule 3 (expr -> FLOAT .)
    OR_ELSE         reduce using rule 3 (expr -> FLOAT .)
    LTE             reduce using rule 3 (expr -> FLOAT .)
    GTE             reduce using rule 3 (expr -> FLOAT .)
    EQ_EQ           reduce using rule 3 (expr -> FLOAT .)
    NEQ             reduce using rule 3 (expr -> FLOAT .)
    LT              reduce using rule 3 (expr -> FLOAT .)
    GT              reduce using rule 3 (expr -> FLOAT .)
    IN              reduce using rule 3 (expr -> FLOAT .)
    CONS            reduce using rule 3 (expr -> FLOAT .)
    L_BRACK         reduce using rule 3 (expr -> FLOAT .)
    EQ              reduce using rule 3 (expr -> FLOAT .)
    COMMA           reduce using rule 3 (expr -> FLOAT .)
    R_BRACK         reduce using rule 3 (expr -> FLOAT .)
    R_PAREN         reduce using rule 3 (expr -> FLOAT .)


state 5

    (4) expr -> STRING .

    SEMICOLON       reduce using rule 4 (expr -> STRING .)
    POW             reduce using rule 4 (expr -> STRING .)
    MULT            reduce using rule 4 (expr -> STRING .)
    DIVINT          reduce using rule 4 (expr -> STRING .)
    DIV             reduce using rule 4 (expr -> STRING .)
    MOD             reduce using rule 4 (expr -> STRING .)
    PLUS            reduce using rule 4 (expr -> STRING .)
    MINUS           reduce using rule 4 (expr -> STRING .)
    AND_ALSO        reduce using rule 4 (expr -> STRING .)
    OR_ELSE         reduce using rule 4 (expr -> STRING .)
    LTE             reduce using rule 4 (expr -> STRING .)
    GTE             reduce using rule 4 (expr -> STRING .)
    EQ_EQ           reduce using rule 4 (expr -> STRING .)
    NEQ             reduce using rule 4 (expr -> STRING .)
    LT              reduce using rule 4 (expr -> STRING .)
    GT              reduce using rule 4 (expr -> STRING .)
    IN              reduce using rule 4 (expr -> STRING .)
    CONS            reduce using rule 4 (expr -> STRING .)
    L_BRACK         reduce using rule 4 (expr -> STRING .)
    EQ              reduce using rule 4 (expr -> STRING .)
    COMMA           reduce using rule 4 (expr -> STRING .)
    R_BRACK         reduce using rule 4 (expr -> STRING .)
    R_PAREN         reduce using rule 4 (expr -> STRING .)


state 6

    (5) expr -> BOOLEAN .

    SEMICOLON       reduce using rule 5 (expr -> BOOLEAN .)
    POW             reduce using rule 5 (expr -> BOOLEAN .)
    MULT            reduce using rule 5 (expr -> BOOLEAN .)
    DIVINT          reduce using rule 5 (expr -> BOOLEAN .)
    DIV             reduce using rule 5 (expr -> BOOLEAN .)
    MOD             reduce using rule 5 (expr -> BOOLEAN .)
    PLUS            reduce using rule 5 (expr -> BOOLEAN .)
    MINUS           reduce using rule 5 (expr -> BOOLEAN .)
    AND_ALSO        reduce using rule 5 (expr -> BOOLEAN .)
    OR_ELSE         reduce using rule 5 (expr -> BOOLEAN .)
    LTE             reduce using rule 5 (expr -> BOOLEAN .)
    GTE             reduce using rule 5 (expr -> BOOLEAN .)
    EQ_EQ           reduce using rule 5 (expr -> BOOLEAN .)
    NEQ             reduce using rule 5 (expr -> BOOLEAN .)
    LT              reduce using rule 5 (expr -> BOOLEAN .)
    GT              reduce using rule 5 (expr -> BOOLEAN .)
    IN              reduce using rule 5 (expr -> BOOLEAN .)
    CONS            reduce using rule 5 (expr -> BOOLEAN .)
    L_BRACK         reduce using rule 5 (expr -> BOOLEAN .)
    EQ              reduce using rule 5 (expr -> BOOLEAN .)
    COMMA           reduce using rule 5 (expr -> BOOLEAN .)
    R_BRACK         reduce using rule 5 (expr -> BOOLEAN .)
    R_PAREN         reduce using rule 5 (expr -> BOOLEAN .)


state 7

    (6) expr -> VARIABLE .

    SEMICOLON       reduce using rule 6 (expr -> VARIABLE .)
    POW             reduce using rule 6 (expr -> VARIABLE .)
    MULT            reduce using rule 6 (expr -> VARIABLE .)
    DIVINT          reduce using rule 6 (expr -> VARIABLE .)
    DIV             reduce using rule 6 (expr -> VARIABLE .)
    MOD             reduce using rule 6 (expr -> VARIABLE .)
    PLUS            reduce using rule 6 (expr -> VARIABLE .)
    MINUS           reduce using rule 6 (expr -> VARIABLE .)
    AND_ALSO        reduce using rule 6 (expr -> VARIABLE .)
    OR_ELSE         reduce using rule 6 (expr -> VARIABLE .)
    LTE             reduce using rule 6 (expr -> VARIABLE .)
    GTE             reduce using rule 6 (expr -> VARIABLE .)
    EQ_EQ           reduce using rule 6 (expr -> VARIABLE .)
    NEQ             reduce using rule 6 (expr -> VARIABLE .)
    LT              reduce using rule 6 (expr -> VARIABLE .)
    GT              reduce using rule 6 (expr -> VARIABLE .)
    IN              reduce using rule 6 (expr -> VARIABLE .)
    CONS            reduce using rule 6 (expr -> VARIABLE .)
    L_BRACK         reduce using rule 6 (expr -> VARIABLE .)
    EQ              reduce using rule 6 (expr -> VARIABLE .)
    COMMA           reduce using rule 6 (expr -> VARIABLE .)
    R_BRACK         reduce using rule 6 (expr -> VARIABLE .)
    R_PAREN         reduce using rule 6 (expr -> VARIABLE .)


state 8

    (7) expr -> list .

    SEMICOLON       reduce using rule 7 (expr -> list .)
    POW             reduce using rule 7 (expr -> list .)
    MULT            reduce using rule 7 (expr -> list .)
    DIVINT          reduce using rule 7 (expr -> list .)
    DIV             reduce using rule 7 (expr -> list .)
    MOD             reduce using rule 7 (expr -> list .)
    PLUS            reduce using rule 7 (expr -> list .)
    MINUS           reduce using rule 7 (expr -> list .)
    AND_ALSO        reduce using rule 7 (expr -> list .)
    OR_ELSE         reduce using rule 7 (expr -> list .)
    LTE             reduce using rule 7 (expr -> list .)
    GTE             reduce using rule 7 (expr -> list .)
    EQ_EQ           reduce using rule 7 (expr -> list .)
    NEQ             reduce using rule 7 (expr -> list .)
    LT              reduce using rule 7 (expr -> list .)
    GT              reduce using rule 7 (expr -> list .)
    IN              reduce using rule 7 (expr -> list .)
    CONS            reduce using rule 7 (expr -> list .)
    L_BRACK         reduce using rule 7 (expr -> list .)
    EQ              reduce using rule 7 (expr -> list .)
    COMMA           reduce using rule 7 (expr -> list .)
    R_BRACK         reduce using rule 7 (expr -> list .)
    R_PAREN         reduce using rule 7 (expr -> list .)


state 9

    (8) expr -> tuple .

    SEMICOLON       reduce using rule 8 (expr -> tuple .)
    POW             reduce using rule 8 (expr -> tuple .)
    MULT            reduce using rule 8 (expr -> tuple .)
    DIVINT          reduce using rule 8 (expr -> tuple .)
    DIV             reduce using rule 8 (expr -> tuple .)
    MOD             reduce using rule 8 (expr -> tuple .)
    PLUS            reduce using rule 8 (expr -> tuple .)
    MINUS           reduce using rule 8 (expr -> tuple .)
    AND_ALSO        reduce using rule 8 (expr -> tuple .)
    OR_ELSE         reduce using rule 8 (expr -> tuple .)
    LTE             reduce using rule 8 (expr -> tuple .)
    GTE             reduce using rule 8 (expr -> tuple .)
    EQ_EQ           reduce using rule 8 (expr -> tuple .)
    NEQ             reduce using rule 8 (expr -> tuple .)
    LT              reduce using rule 8 (expr -> tuple .)
    GT              reduce using rule 8 (expr -> tuple .)
    IN              reduce using rule 8 (expr -> tuple .)
    CONS            reduce using rule 8 (expr -> tuple .)
    L_BRACK         reduce using rule 8 (expr -> tuple .)
    EQ              reduce using rule 8 (expr -> tuple .)
    COMMA           reduce using rule 8 (expr -> tuple .)
    R_BRACK         reduce using rule 8 (expr -> tuple .)
    R_PAREN         reduce using rule 8 (expr -> tuple .)


state 10

    (10) expr -> HASHTAG . INTEGER expr

    INTEGER         shift and go to state 37


state 11

    (20) expr -> MINUS . expr
    (2) expr -> . INTEGER
    (3) expr -> . FLOAT
    (4) expr -> . STRING
    (5) expr -> . BOOLEAN
    (6) expr -> . VARIABLE
    (7) expr -> . list
    (8) expr -> . tuple
    (9) expr -> . expr indexSequenceList EQ expr
    (10) expr -> . HASHTAG INTEGER expr
    (13) expr -> . expr POW expr
    (14) expr -> . expr MULT expr
    (15) expr -> . expr DIVINT expr
    (16) expr -> . expr DIV expr
    (17) expr -> . expr MOD expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . MINUS expr
    (21) expr -> . expr AND_ALSO expr
    (22) expr -> . expr OR_ELSE expr
    (23) expr -> . expr LTE expr
    (24) expr -> . expr GTE expr
    (25) expr -> . expr EQ_EQ expr
    (26) expr -> . expr NEQ expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr IN expr
    (30) expr -> . expr CONS expr
    (31) expr -> . NOT expr
    (32) expr -> . expr L_BRACK expr R_BRACK
    (37) expr -> . L_PAREN expr R_PAREN
    (38) expr -> . expr EQ expr
    (33) list -> . L_BRACK sequence R_BRACK
    (34) list -> . L_BRACK R_BRACK
    (11) tuple -> . L_PAREN sequence R_PAREN
    (12) tuple -> . L_PAREN R_PAREN

    INTEGER         shift and go to state 3
    FLOAT           shift and go to state 4
    STRING          shift and go to state 5
    BOOLEAN         shift and go to state 6
    VARIABLE        shift and go to state 7
    HASHTAG         shift and go to state 10
    MINUS           shift and go to state 11
    NOT             shift and go to state 12
    L_PAREN         shift and go to state 14
    L_BRACK         shift and go to state 13

    expr                           shift and go to state 38
    list                           shift and go to state 8
    tuple                          shift and go to state 9

state 12

    (31) expr -> NOT . expr
    (2) expr -> . INTEGER
    (3) expr -> . FLOAT
    (4) expr -> . STRING
    (5) expr -> . BOOLEAN
    (6) expr -> . VARIABLE
    (7) expr -> . list
    (8) expr -> . tuple
    (9) expr -> . expr indexSequenceList EQ expr
    (10) expr -> . HASHTAG INTEGER expr
    (13) expr -> . expr POW expr
    (14) expr -> . expr MULT expr
    (15) expr -> . expr DIVINT expr
    (16) expr -> . expr DIV expr
    (17) expr -> . expr MOD expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . MINUS expr
    (21) expr -> . expr AND_ALSO expr
    (22) expr -> . expr OR_ELSE expr
    (23) expr -> . expr LTE expr
    (24) expr -> . expr GTE expr
    (25) expr -> . expr EQ_EQ expr
    (26) expr -> . expr NEQ expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr IN expr
    (30) expr -> . expr CONS expr
    (31) expr -> . NOT expr
    (32) expr -> . expr L_BRACK expr R_BRACK
    (37) expr -> . L_PAREN expr R_PAREN
    (38) expr -> . expr EQ expr
    (33) list -> . L_BRACK sequence R_BRACK
    (34) list -> . L_BRACK R_BRACK
    (11) tuple -> . L_PAREN sequence R_PAREN
    (12) tuple -> . L_PAREN R_PAREN

    INTEGER         shift and go to state 3
    FLOAT           shift and go to state 4
    STRING          shift and go to state 5
    BOOLEAN         shift and go to state 6
    VARIABLE        shift and go to state 7
    HASHTAG         shift and go to state 10
    MINUS           shift and go to state 11
    NOT             shift and go to state 12
    L_PAREN         shift and go to state 14
    L_BRACK         shift and go to state 13

    expr                           shift and go to state 39
    list                           shift and go to state 8
    tuple                          shift and go to state 9

state 13

    (33) list -> L_BRACK . sequence R_BRACK
    (34) list -> L_BRACK . R_BRACK
    (35) sequence -> . expr COMMA sequence
    (36) sequence -> . expr
    (2) expr -> . INTEGER
    (3) expr -> . FLOAT
    (4) expr -> . STRING
    (5) expr -> . BOOLEAN
    (6) expr -> . VARIABLE
    (7) expr -> . list
    (8) expr -> . tuple
    (9) expr -> . expr indexSequenceList EQ expr
    (10) expr -> . HASHTAG INTEGER expr
    (13) expr -> . expr POW expr
    (14) expr -> . expr MULT expr
    (15) expr -> . expr DIVINT expr
    (16) expr -> . expr DIV expr
    (17) expr -> . expr MOD expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . MINUS expr
    (21) expr -> . expr AND_ALSO expr
    (22) expr -> . expr OR_ELSE expr
    (23) expr -> . expr LTE expr
    (24) expr -> . expr GTE expr
    (25) expr -> . expr EQ_EQ expr
    (26) expr -> . expr NEQ expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr IN expr
    (30) expr -> . expr CONS expr
    (31) expr -> . NOT expr
    (32) expr -> . expr L_BRACK expr R_BRACK
    (37) expr -> . L_PAREN expr R_PAREN
    (38) expr -> . expr EQ expr
    (33) list -> . L_BRACK sequence R_BRACK
    (34) list -> . L_BRACK R_BRACK
    (11) tuple -> . L_PAREN sequence R_PAREN
    (12) tuple -> . L_PAREN R_PAREN

    R_BRACK         shift and go to state 41
    INTEGER         shift and go to state 3
    FLOAT           shift and go to state 4
    STRING          shift and go to state 5
    BOOLEAN         shift and go to state 6
    VARIABLE        shift and go to state 7
    HASHTAG         shift and go to state 10
    MINUS           shift and go to state 11
    NOT             shift and go to state 12
    L_PAREN         shift and go to state 14
    L_BRACK         shift and go to state 13

    sequence                       shift and go to state 40
    expr                           shift and go to state 42
    list                           shift and go to state 8
    tuple                          shift and go to state 9

state 14

    (37) expr -> L_PAREN . expr R_PAREN
    (11) tuple -> L_PAREN . sequence R_PAREN
    (12) tuple -> L_PAREN . R_PAREN
    (2) expr -> . INTEGER
    (3) expr -> . FLOAT
    (4) expr -> . STRING
    (5) expr -> . BOOLEAN
    (6) expr -> . VARIABLE
    (7) expr -> . list
    (8) expr -> . tuple
    (9) expr -> . expr indexSequenceList EQ expr
    (10) expr -> . HASHTAG INTEGER expr
    (13) expr -> . expr POW expr
    (14) expr -> . expr MULT expr
    (15) expr -> . expr DIVINT expr
    (16) expr -> . expr DIV expr
    (17) expr -> . expr MOD expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . MINUS expr
    (21) expr -> . expr AND_ALSO expr
    (22) expr -> . expr OR_ELSE expr
    (23) expr -> . expr LTE expr
    (24) expr -> . expr GTE expr
    (25) expr -> . expr EQ_EQ expr
    (26) expr -> . expr NEQ expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr IN expr
    (30) expr -> . expr CONS expr
    (31) expr -> . NOT expr
    (32) expr -> . expr L_BRACK expr R_BRACK
    (37) expr -> . L_PAREN expr R_PAREN
    (38) expr -> . expr EQ expr
    (35) sequence -> . expr COMMA sequence
    (36) sequence -> . expr
    (33) list -> . L_BRACK sequence R_BRACK
    (34) list -> . L_BRACK R_BRACK
    (11) tuple -> . L_PAREN sequence R_PAREN
    (12) tuple -> . L_PAREN R_PAREN

    R_PAREN         shift and go to state 44
    INTEGER         shift and go to state 3
    FLOAT           shift and go to state 4
    STRING          shift and go to state 5
    BOOLEAN         shift and go to state 6
    VARIABLE        shift and go to state 7
    HASHTAG         shift and go to state 10
    MINUS           shift and go to state 11
    NOT             shift and go to state 12
    L_PAREN         shift and go to state 14
    L_BRACK         shift and go to state 13

    expr                           shift and go to state 43
    sequence                       shift and go to state 45
    list                           shift and go to state 8
    tuple                          shift and go to state 9

state 15

    (1) line -> expr SEMICOLON .

    $end            reduce using rule 1 (line -> expr SEMICOLON .)


state 16

    (9) expr -> expr indexSequenceList . EQ expr
    (39) indexSequenceList -> indexSequenceList . indexTkn
    (41) indexTkn -> . L_BRACK INTEGER R_BRACK

    EQ              shift and go to state 46
    L_BRACK         shift and go to state 48

    indexTkn                       shift and go to state 47

state 17

    (38) expr -> expr EQ . expr
    (2) expr -> . INTEGER
    (3) expr -> . FLOAT
    (4) expr -> . STRING
    (5) expr -> . BOOLEAN
    (6) expr -> . VARIABLE
    (7) expr -> . list
    (8) expr -> . tuple
    (9) expr -> . expr indexSequenceList EQ expr
    (10) expr -> . HASHTAG INTEGER expr
    (13) expr -> . expr POW expr
    (14) expr -> . expr MULT expr
    (15) expr -> . expr DIVINT expr
    (16) expr -> . expr DIV expr
    (17) expr -> . expr MOD expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . MINUS expr
    (21) expr -> . expr AND_ALSO expr
    (22) expr -> . expr OR_ELSE expr
    (23) expr -> . expr LTE expr
    (24) expr -> . expr GTE expr
    (25) expr -> . expr EQ_EQ expr
    (26) expr -> . expr NEQ expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr IN expr
    (30) expr -> . expr CONS expr
    (31) expr -> . NOT expr
    (32) expr -> . expr L_BRACK expr R_BRACK
    (37) expr -> . L_PAREN expr R_PAREN
    (38) expr -> . expr EQ expr
    (33) list -> . L_BRACK sequence R_BRACK
    (34) list -> . L_BRACK R_BRACK
    (11) tuple -> . L_PAREN sequence R_PAREN
    (12) tuple -> . L_PAREN R_PAREN

    INTEGER         shift and go to state 3
    FLOAT           shift and go to state 4
    STRING          shift and go to state 5
    BOOLEAN         shift and go to state 6
    VARIABLE        shift and go to state 7
    HASHTAG         shift and go to state 10
    MINUS           shift and go to state 11
    NOT             shift and go to state 12
    L_PAREN         shift and go to state 14
    L_BRACK         shift and go to state 13

    expr                           shift and go to state 49
    list                           shift and go to state 8
    tuple                          shift and go to state 9

state 18

    (13) expr -> expr POW . expr
    (2) expr -> . INTEGER
    (3) expr -> . FLOAT
    (4) expr -> . STRING
    (5) expr -> . BOOLEAN
    (6) expr -> . VARIABLE
    (7) expr -> . list
    (8) expr -> . tuple
    (9) expr -> . expr indexSequenceList EQ expr
    (10) expr -> . HASHTAG INTEGER expr
    (13) expr -> . expr POW expr
    (14) expr -> . expr MULT expr
    (15) expr -> . expr DIVINT expr
    (16) expr -> . expr DIV expr
    (17) expr -> . expr MOD expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . MINUS expr
    (21) expr -> . expr AND_ALSO expr
    (22) expr -> . expr OR_ELSE expr
    (23) expr -> . expr LTE expr
    (24) expr -> . expr GTE expr
    (25) expr -> . expr EQ_EQ expr
    (26) expr -> . expr NEQ expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr IN expr
    (30) expr -> . expr CONS expr
    (31) expr -> . NOT expr
    (32) expr -> . expr L_BRACK expr R_BRACK
    (37) expr -> . L_PAREN expr R_PAREN
    (38) expr -> . expr EQ expr
    (33) list -> . L_BRACK sequence R_BRACK
    (34) list -> . L_BRACK R_BRACK
    (11) tuple -> . L_PAREN sequence R_PAREN
    (12) tuple -> . L_PAREN R_PAREN

    INTEGER         shift and go to state 3
    FLOAT           shift and go to state 4
    STRING          shift and go to state 5
    BOOLEAN         shift and go to state 6
    VARIABLE        shift and go to state 7
    HASHTAG         shift and go to state 10
    MINUS           shift and go to state 11
    NOT             shift and go to state 12
    L_PAREN         shift and go to state 14
    L_BRACK         shift and go to state 13

    expr                           shift and go to state 50
    list                           shift and go to state 8
    tuple                          shift and go to state 9

state 19

    (14) expr -> expr MULT . expr
    (2) expr -> . INTEGER
    (3) expr -> . FLOAT
    (4) expr -> . STRING
    (5) expr -> . BOOLEAN
    (6) expr -> . VARIABLE
    (7) expr -> . list
    (8) expr -> . tuple
    (9) expr -> . expr indexSequenceList EQ expr
    (10) expr -> . HASHTAG INTEGER expr
    (13) expr -> . expr POW expr
    (14) expr -> . expr MULT expr
    (15) expr -> . expr DIVINT expr
    (16) expr -> . expr DIV expr
    (17) expr -> . expr MOD expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . MINUS expr
    (21) expr -> . expr AND_ALSO expr
    (22) expr -> . expr OR_ELSE expr
    (23) expr -> . expr LTE expr
    (24) expr -> . expr GTE expr
    (25) expr -> . expr EQ_EQ expr
    (26) expr -> . expr NEQ expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr IN expr
    (30) expr -> . expr CONS expr
    (31) expr -> . NOT expr
    (32) expr -> . expr L_BRACK expr R_BRACK
    (37) expr -> . L_PAREN expr R_PAREN
    (38) expr -> . expr EQ expr
    (33) list -> . L_BRACK sequence R_BRACK
    (34) list -> . L_BRACK R_BRACK
    (11) tuple -> . L_PAREN sequence R_PAREN
    (12) tuple -> . L_PAREN R_PAREN

    INTEGER         shift and go to state 3
    FLOAT           shift and go to state 4
    STRING          shift and go to state 5
    BOOLEAN         shift and go to state 6
    VARIABLE        shift and go to state 7
    HASHTAG         shift and go to state 10
    MINUS           shift and go to state 11
    NOT             shift and go to state 12
    L_PAREN         shift and go to state 14
    L_BRACK         shift and go to state 13

    expr                           shift and go to state 51
    list                           shift and go to state 8
    tuple                          shift and go to state 9

state 20
